fix(devops): removed darwin/amd64

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build base
         run: |
           export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64,darwin/amd64 --push"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           ./docker.local/bin/build.base.sh
 
       - name: Build blobber
@@ -58,7 +58,7 @@ jobs:
         
           export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
           export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:$TAG -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64,darwin/amd64 --push"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
 
           ./docker.local/bin/build.blobber.sh
 
@@ -94,7 +94,7 @@ jobs:
       - name: Build base
         run: |
           export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64,darwin/amd64 --push"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           ./docker.local/bin/build.base.sh
 
       - name: Build validator
@@ -103,7 +103,7 @@ jobs:
         
           export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
           export DOCKER_IMAGE_BLOBBER="-t ${VALIDATOR_REGISTRY}:$TAG -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64,darwin/amd64 --push"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
     
           ./docker.local/bin/build.validator.sh
 
