--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -31,28 +31,14 @@ jobs:
 
           echo "BRANCH=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF)" >> $GITHUB_ENV
           echo "SHA=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo $GITHUB_SHA || echo '${{ github.event.pull_request.head.sha }}')" >> $GITHUB_ENV
-
+          
       - name: Setup go 1.17
         uses: actions/setup-go@v2
         with:
           go-version: '1.17' # The Go version to download (if necessary) and use.
 
-      # - uses: actions/cache@v2
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
-
-
       - name: Clone blobber
         uses: actions/checkout@v1
-
-      - name: Build blobber_base
-        run: ./docker.local/bin/build.base.sh
-
-      - name: Build blobber
-        run: ./docker.local/bin/build.blobber.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -60,14 +46,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Push blobber
+      - name: Build base
         run: |
-          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG
-          docker push ${BLOBBER_REGISTRY}:$TAG || { sleep 10 && docker push ${BLOBBER_REGISTRY}:$TAG; }
+          export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
+          ./docker.local/bin/build.base.sh
 
+      - name: Build blobber
+        run: |
           SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
-          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
-          docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  || { sleep 10 && docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA; }
+        
+          export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
+          export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:${TAG} -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
+
+          ./docker.local/bin/build.blobber.sh
 
   validator:
     runs-on: [self-hosted, build]
@@ -89,21 +82,8 @@ jobs:
         with:
           go-version: '1.17' # The Go version to download (if necessary) and use.
 
-      # - uses: actions/cache@v2
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
-
       - name: Clone blobber
         uses: actions/checkout@v1
-
-      - name: Build blobber_base
-        run: ./docker.local/bin/build.base.sh
-
-      - name: Build validator
-        run: ./docker.local/bin/build.validator.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -111,14 +91,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Push validator
+      - name: Build base
         run: |
-          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG
-          docker push ${VALIDATOR_REGISTRY}:$TAG || { sleep 10 && docker push ${VALIDATOR_REGISTRY}:$TAG; }
+          export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
+          ./docker.local/bin/build.base.sh
 
+      - name: Build validator
+        run: |
           SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
-          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
-          docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA || { sleep 10 && docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA; }
+        
+          export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
+          export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
+    
+          ./docker.local/bin/build.validator.sh
+
 
   system-tests:
     if: github.event_name != 'workflow_dispatch'
