--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -33,10 +33,10 @@ services:
     links:
       - postgres-post:postgres-post
     volumes:
-      - ../config:/blobber/config
-      - ./blobber${BLOBBER}/data:/blobber/data
-      - ./blobber${BLOBBER}/log:/blobber/log
-      - ./keys_config:/blobber/keysconfig
+      - ../config:/validator/config
+      - ./blobber${BLOBBER}/data:/validator/data
+      - ./blobber${BLOBBER}/log:/validator/log
+      - ./keys_config:/validator/keysconfig
     ports:
       - "506${BLOBBER}:506${BLOBBER}"
     labels:
