fix(docker): fixed validator workdir issue

--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - "506${BLOBBER}:506${BLOBBER}"
     labels:
       zchain: "validator"
-    command: ./bin/validator --port 506${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --log_dir /blobber/log
+    command: ./bin/validator --port 506${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --log_dir /validator/log
     networks:
       default:
       testnet0:
