--- a/.github/workflows/merge_alert.yaml
+++ b/.github/workflows/merge_alert.yaml
@@ -8,7 +8,7 @@ on:
    
 jobs:
   test:
-    runs-on: ubuntu-18.04  
+    runs-on: docker-builds
     steps:
       - uses: actions/checkout@v2
         with:
