--- a/docker.local/p0docker-compose.yml
+++ b/docker.local/p0docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - ./blobber${BLOBBER}/data/postgresql:/var/lib/postgresql/data
@@ -17,6 +18,7 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
     volumes:
       - ../bin:/blobber/bin
       - ../sql:/blobber/sql
