--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,7 +58,8 @@ jobs:
         with:
           directory: ./code/go/0chain.net/ 
           fail_ci_if_error: true
-          files: coverage.txt
+          files: ./coverage.txt
+          verbose: true
     
 
   integration-tests:
