--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,9 +56,9 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-          fail_ci_if_error: true
+          # fail_ci_if_error: true
           files: ./code/go/0chain.net/coverage.txt
-          flags: unittests
+          flags: Unit-Tests
           verbose: true
     
   integration-tests:
