Add build tags to separate unit and integration tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,4 +103,4 @@ jobs:
           #sudo make integration-tests 
           go17=$(which go)
           root=$(pwd)
-          sudo CGO_ENABLED=1 root=$root integration=1 $go17 test -tags bn256  ./...
+          sudo CGO_ENABLED=1 root=$root integration=1 $go17 test -tags=integration  ./...
