fix(Makefile): fixed postgres issue

--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -92,7 +92,7 @@ challenge_response:
   max_retries: 20
 pg:
   user: postgres
-  password: password
+  password: postgres
 db:
   automigrate: true # true to automigrate with gorm's Automigration
   name: blobber_meta
