--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,10 +66,18 @@ jobs:
     runs-on: [ubuntu-20.04]
     timeout-minutes: 40
     steps:
+      - name: go env
+        run:
+          go env
+          which go
       - name: Setup go 1.17
         uses: actions/setup-go@v2
         with:
           go-version: '1.17' # The Go version to download (if necessary) and use.
+      - name: fix go binary
+        run:
+          go env
+          which go
 
       # - uses: actions/cache@v2
       #   with:
