--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -154,7 +154,9 @@ cold_storage:
   delete_cloud_copy: true
 
 disk_update:
-  automatic_update: true # defaults to true. If false, blobber has to manually update blobber's capacity upon increase/decrease
+  # defaults to true. If false, blobber has to manually update blobber's capacity upon increase/decrease
+  # If blobber has to limit its capacity to 5% of its capacity then it should turn automaci_update to false.
+  automatic_update: true 
   blobber_update_interval: 5 # In minutes
 # integration tests related configurations
 integration_tests:
