--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,4 +103,4 @@ jobs:
           #sudo make integration-tests 
           go=$(which go)
           root=$(pwd)
-          sudo CGO_ENABLED=1 root=$root integration=1 $go test -tags bn256  ./...
+          sudo CGO_ENABLED=1 root=$root integration=1 $go test -tags bn256 -tags=integration  ./...
