fix(devops): kill blobber grpc process if it exists

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,7 +89,7 @@ jobs:
           docker ps
       - name: Run Tests
         run: |
-          sudo kill -9 $(lsof -t -i:31501)
+          pid=$(lsof -t -i:31501) && sudo kill -9 $pid
           make local-build
           sudo make local-run &
           sleep 15
