--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,6 +96,8 @@ jobs:
           #sudo fuser -k 31501/tcp
           #sudo fuser 5051/tcp
           #sudo fuser -k 5051/tcp
+          sudo lsof -i:5051
+          sudo lsof -i:31501
 
           echo ===============[   run blobber instance  ]====================
           make local-build
