fix(devops): kill blobber grpc process if it exists

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,10 +91,13 @@ jobs:
         run: |
           echo ===============[  kill blobber instance  ]====================
           sudo apt-get update -y
-          sudo apt-get install lsof -y
+          sudo apt-get install lsof procps -y
 
-          sudo n=$(lsof -i tcp:31501 | grep -v PID | wc -l)
-          [ $n -gt 0 ] && sudo kill -9 $(sudo lsof -i tcp:31501 | awk '{print $2}' | grep -v PID)
+
+          lsof -i tcp:31501 
+          #sudo n=$(lsof -i tcp:31501 | grep -v PID | wc -l)
+          #[ $n -gt 0 ] && sudo kill -9 $(sudo lsof -i tcp:31501 | awk '{print $2}' | grep -v PID)
+          sudo pkill -9 blobber
 
           make local-build
           sudo make local-run &
@@ -112,4 +115,4 @@ jobs:
           root=$(pwd)
           sudo CGO_ENABLED=1 root=$root integration=1 $go test -tags bn256 -tags=integration  ./...
 
-          sudo kill -9 $(sudo lsof -i tcp:31501 | awk '{print $2}' | grep -v PID)
+          sudo pkill -9 blobber
