--- a/https/conf.d/nginx.conf
+++ b/https/conf.d/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen [::]:80;
     listen 80;
+    client_max_body_size 250M;
 
     location ~ /.well-known/acme-challenge {
          allow all; 
@@ -29,6 +30,7 @@ server {
 # server {
 #     listen [::]:443 ssl http2;
 #     listen 443 ssl http2;
+#     client_max_body_size 250M;
 
 #     server_name <your_domain>;
 
