--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -97,18 +97,12 @@ pg:
   user: postgres
   password: postgres
 db:
-  automigrate: true # true to automigrate with gorm's Automigration
+  automigrate: false # true to automigrate with gorm's Automigration
   name: blobber_meta
   user: blobber_user
   password: blobber
   host: postgres
   port: 5432
-  # keep_tables list won't be automigrated if table exists. If table name is in both keep_tables.
-  # table will be considered to not automigrate. Other tables will be dropped regardless and schema is migrated
-  # Example:
-  # keep_tables:
-  #   - allocations
-  #   - terms
  
 
 geolocation:
