--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -54,11 +54,11 @@ jobs:
       zwallet_cli_branch: ${{ github.event.inputs.zwallet_cli_branch }}
       blobber_branch:  ${{ github.ref_name }}
       validator_branch:  ${{ github.ref_name }}
+      zbox_branch: ${{ github.event.inputs.zbox_branch }}
       zblock_branch: ${{ github.event.inputs.zblock_branch }}
       zdns_branch: ${{ github.event.inputs.zdns_branch }}
       explorer_branch: master
       test_file_filter: ${{ github.event.inputs.test_file_filter }}
-      zproxy_branch: staging
       zsearch_branch: staging
       skip_tests: ${{ github.event.inputs.skip_tests }}
     secrets:
