--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -1,4 +1,4 @@
-name: "Dockerize"
+name: "Build & Publish Docker Image"
 
 concurrency:
   group: "publish-${{ github.ref }}"
@@ -41,6 +41,12 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -86,6 +92,12 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
