chore(devops): added DOCKER_CLI_EXPERIMENTAL

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -16,6 +16,7 @@ on:
 env:
   BLOBBER_REGISTRY: ${{ secrets.BLOBBER_REGISTRY }}
   VALIDATOR_REGISTRY: ${{ secrets.VALIDATOR_REGISTRY }}
+  DOCKER_CLI_EXPERIMENTAL: true
 
 jobs:
   blobber:
